--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=30888&format=png&color=ff4d4d">
     <meta property="og:title" content="Lick Discord Bot">
     <meta property="og:description" content="Lick is a discord bot that protects servers from anti raid, anti spam, anti nuke, and you know what's better? Licks free! Secure your discord servers with Lick.">
-    <meta property="og:image" content="lickbot.png">
+    <meta property="og:image" content="https://lickbot.vercel.app/lickbot.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap');
 
@@ -62,5 +62,5 @@
     <div class="links">
         <a href="https://discord.com/oauth2/authorize?client_id=1284285366081290271&permissions=8&integration_type=0&scope=bot">invite</a>
         <a href="https://discord.com/users/719903204690624512">support</a>
-        <a href="steps.html">tutorial</a>
+        <a href="https://lickbot.vercel.app/steps">tutorial</a>
 </html>
