--- a/steps.html
+++ b/steps.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ff4d4d">
-    <title>Discord Webhook Spammer</title>
+    <title>Lick</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=30888&format=png&color=ff4d4d">
     <meta property="og:title" content="Discord Webhook Spammer">
     <meta property="og:description" content="A fast and efficient Discord Webhook Spammer designed to run in python.">
@@ -64,6 +64,6 @@
     <div class="title">How to setup</div>
     <p class="text">1. Invite the bot.</p>
     <p class="text">2. Then run the "/setup" command to setup server modifications!</p>
-    <a class="goback" href="index.html">Go back</a>
+    <a class="goback" href="https://lickbot.vercel.app">Go back</a>
 
 </html>
