--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ff4d4d">
+    <meta name="theme-color" content="#e63c3c">
     <title>Lick</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=30888&format=png&color=ff4d4d">
     <meta property="og:title" content="Lick Discord Bot">
