--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lick</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=30888&format=png&color=ff4d4d">
     <meta property="og:title" content="Lick Discord Bot">
-    <meta property="og:description" content="Lick is a discord bot that protects servers from anti raid, anti spam, anti nuke, and you know what's better? Licks free! Secure your discord servers with Lick.">
+    <meta property="og:description" content="Lick is a discord bot that protects servers with anti raid, anti spam, anti nuke, and you know what's better? Licks free! Secure your discord servers with Lick.">
     <meta property="og:image" content="https://lickbot.vercel.app/lickbot.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&amp;display=swap');
