--- a/steps.html
+++ b/steps.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#ff4d4d">
+    <meta name="theme-color" content="#e63c3c">
     <title>Lick</title>
     <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=30888&format=png&color=ff4d4d">
-    <meta property="og:title" content="Discord Webhook Spammer">
-    <meta property="og:description" content="A fast and efficient Discord Webhook Spammer designed to run in python.">
-    <meta property="og:image" content="https://img.icons8.com/?size=300&id=30888&format=png&color=ff4d4d">
+    <meta property="og:title" content="Lick Discord Bot">
+    <meta property="og:description" content="Lick is a discord bot that protects servers with anti raid, anti spam, anti nuke, and you know what's better? Licks free! Secure your discord servers with Lick.">
+    <meta property="og:image" content="https://lickbot.vercel.app/lickbot.png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
